--- a/sodukoGame/sodukoGame.html
+++ b/sodukoGame/sodukoGame.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku</title>
-    <link rel="stylesheet" href="/sodukoGame/sodukoStyle.css">
+    <link rel="stylesheet" href="./sodukoStyle.css">
 </head>
 <body>
     <div class="sudokuContainer">
@@ -28,6 +28,6 @@
             <button class="btn" id="checkBtn">Check</button>
             <button class="btn" id="resetBtn">Reset</button>
     </div>
-    <script src="/sodukoGame/sodukoJs.js"></script>
+    <script src="./sodukoJs.js"></script>
 </body>
 </html>
